# clash

./: .gitignore  00_restful.c  Makefile  Makefile.am  Makefile.defs  add-client.c  add-server.c  bug.yaml  bus_calc_service.c  bus_notify.c  clash_tun.c  configure.ac  convert.c  def.h  extract.c  garbage.c  jsrv.c  main.c  meson.build  meson_options.txt  readme.md  rebuild.sh  restful_port.h  route.c  route_example_recvmsg.c  route_ioctl.c  strace_add_tun0.txt  strace_del_tun0.txt  strace_up_tun0.txt  test.c  test.sh  write_json.c  yaml.c
bin.convert/: Makefile.am  convert.c  flag.h  meson.build
bin.script/: clash.sh  meson.build
bin.sip002/: main.c  meson.build
bin.tun/: Makefile.am  bus.c  bus.h  ioctl.c  main.c  meson.build  netlink.c  netlink.h  privilege.h  proc.c  proc.h  profile.c  profile.h  shadowsocks2.c  status.c  test.sh
clash_misc/: Makefile  Makefile.am  clash.sh  convert.c  flag.c  flag.h  utf8count.c
clash_sip002/: Makefile.am  main.c  qr.sh
clash_tun/: Makefile  Makefile.am  bus.c  bus.h  def.h  file.h  ioctl.c  ioctl.h  main.c  netlink.c  privilege.c  profile.c  profile.h  readme.md  resolv.c  restful.c  shadowsocks.c  shadowsocks2.c  status.h  yaml2profile.c  yaml2profile.h
clash_update/: Makefile  convert.c
doc/: Doxyfile.in  Makefile.am  meson.build
examples/: Makefile.am  framebuffer.c  framebuffer.sh  ss.c
include/: Makefile.am  libclash.h  meson.build
lib/: Makefile.am  meson.build  resolv.c  restful.c  yaml2profile.c
src/: Makefile  bus.h  conf.c  conf.h  curl.c  curl.h  def.h  file.c  ioctl.c  main.c  netlink.c  netlink.h  proc.c  proc.h  profile.c  resolv.c  resolv.h  restful.h  shadowsocks.c  shadowsocks.h  test.sh  util.c
