# https://mesonbuild.com/Reference-manual_functions.html#find_program
DOXYGEN = find_program('doxygen')
DOT = find_program('dot')
PDF2SVG = find_program('pdf2svg')

assert(DOXYGEN.found())
assert(DOT.found())
assert(PDF2SVG.found())

# foreach
# https://mesonbuild.com/Syntax.html#foreach-statements
